--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,20 @@
-certifi
-openai
-python-docx
-tiktoken
-pydub
-click
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+certifi==2022.12.7
+charset-normalizer==3.1.0
+click==8.1.3
+frozenlist==1.3.3
+idna==3.4
+lxml==4.9.2
+multidict==6.0.4
+openai==0.27.6
+pydub==0.25.1
+python-docx==0.8.11
+regex==2023.5.5
+requests==2.30.0
+tiktoken==0.3.3
+tqdm==4.65.0
+urllib3==2.0.2
+yarl==1.9.2
