--- a/meeting_notes_config.key.example
+++ b/meeting_notes_config.key.example
@@ -1,3 +1,4 @@
 api_key = "pc-V2qnYzdGny27XKaM6sJcT3BlbkFJLF9pXXXXXXXXXXXXXXXX"   # your API Key.  Replace the value between the quotes.  This API key has been canceled, thanks for your concern!
 notes_folder_path = "/Users/johncole/Desktop/Notes/" # Directory where we're keeping our notes.
 gpt_log_dir = "gpt_logs/"   # Directory we're keeping the log files from the conversion.
+error_log = "/Users/johncole/Documents/GitHub/meeting_note_taker/notes_errors.log"
