--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ openai202305/
 *.key
 gpt_logs/
 *.log
+run_note_taker.sh
+NoteTaker.command
 
 # C extensions
 *.so
@@ -155,3 +157,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+.DS_Store
